🦟 FIX: Horizontal scroll on small screens

--- a/15. chat-app-css-illustration/styles.css
+++ b/15. chat-app-css-illustration/styles.css
@@ -42,6 +42,7 @@ body {
 	font-weight: 400;
 	line-height: 1.8;
 	color: hsl(271, 6%, 64%);
+	overflow: hidden;
 }
 
 main {
@@ -160,7 +161,7 @@ main::after {
 .phone {
 	position: relative;
 	z-index: 10;
-	max-width: 27em;
+	max-width: 25em;
 	padding: 1em;
 	border: 1em solid var(--clr-neutral-100);
 	border-radius: 2em;
